crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_missing_exported_operators.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing ((|>))\n"
info: diagnostic
---
nash::names::export_not_found

  × Unknown exported operator (|>).
   ╭─[src/Main.nash:1:23]
 1 │ module Main exposing ((|>))
   ·                       ────
   ╰────
  help: Define the name or remove it from the exposing list.
