crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_missing_imported_interfaces.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\nimport Outcome\n\ntype alias Wrapped 'e 'a = Outcome.Outcome 'e 'a\n"
info: diagnostic
---
nash::names::import_not_found

  × Unknown module `Outcome`.
   ╭─[src/Main.nash:3:8]
 2 │ 
 3 │ import Outcome
   ·        ───────
 4 │ 
   ╰────
