crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_unresolved_exported_upper_names.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Missing)\n"
info: diagnostic
---
nash::names::export_not_found

  × Unknown exported type `Missing`.
   ╭─[src/Main.nash:1:23]
 1 │ module Main exposing (Missing)
   ·                       ───────
   ╰────
  help: Define the name or remove it from the exposing list.
