crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_unresolved_named_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\ntype alias Wrapped = Missing\n"
info: diagnostic
---
nash::names::not_found_type

  × Unknown type `Missing`.
   ╭─[src/Main.nash:3:22]
 2 │ 
 3 │ type alias Wrapped = Missing
   ·                      ───────
   ╰────
  help: Similar names:

            string
            Int
            List
            int
