crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_unresolved_qualified_named_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\ntype alias Wrapped = Missing.Maybe\n"
info: diagnostic
---
nash::names::not_found_type

  × Unknown type `Missing.Maybe`.
   ╭─[src/Main.nash:3:22]
 2 │ 
 3 │ type alias Wrapped = Missing.Maybe
   ·                      ─────────────
   ╰────
  help: Similar names:

            string
            Primitive.Map
            Primitive.value
            Int
