crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_requires_explicit_header.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmain = 42\n"
info: diagnostic
---
nash::names::missing_module_header

  × Missing module declaration.
  help: Add `module Main exposing (..)` at the start of the file.
