crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_with_imported_aliased_alias_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Decoder)\n\nimport Json.Decode as Decode\n\ntype alias Decoder 'msg = Decode.Decoder 'msg\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 23,
                    },
                    end: Position {
                        line: 1,
                        column: 30,
                    },
                },
                value: Alias(
                    "Decoder",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 1,
                },
                end: Position {
                    line: 6,
                    column: 1,
                },
            },
            value: Alias {
                kind: Arrow(
                    Type,
                    Type,
                ),
                context: [
                    Implied {
                        trait_: QualifiedName {
                            home: ModuleName {
                                package: Some(
                                    PackageName {
                                        author: "nash",
                                        project: "core",
                                    },
                                ),
                                name: "Builtin",
                            },
                            name: "Big",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 42,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 46,
                                    },
                                },
                                value: Var(
                                    "msg",
                                ),
                            },
                        ],
                    },
                ],
                name: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 12,
                        },
                        end: Position {
                            line: 5,
                            column: 19,
                        },
                    },
                    value: "Decoder",
                },
                parameters: [
                    "msg",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 27,
                        },
                        end: Position {
                            line: 5,
                            column: 46,
                        },
                    },
                    value: Alias {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Json.Decode",
                            },
                            name: "Decoder",
                        },
                        arguments: [
                            AliasArgument {
                                name: "msg",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 42,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 46,
                                        },
                                    },
                                    value: Var(
                                        "msg",
                                    ),
                                },
                            },
                        ],
                        remaining: [],
                        target: Open(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                },
                                value: Var(
                                    "msg",
                                ),
                            },
                        ),
                    },
                },
            },
        },
    ],
    binops: [],
}
